fixedoverflow issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@
     padding: 0;
     box-sizing: borderbox;
 }
+html{
+    overflow-x: hidden;
+}
+
+body{
+    overflow-x: hidden;
+}
 
 :root{
     --nav-color: rgb(4, 18, 59);
@@ -74,6 +81,7 @@ nav{
         width: 50%;
         transform: translateX(100%);
         transition:transform 0.5s ease-in;
+        position: fixed;
     }
     .nav-links li{
         opacity: 0;
